--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
                 technical collaboration with the executive board.</li>
         </ul>
 
-        <footer><p>Thanks for talking the time to read Smiley symbol: &#x1F642;</p></footer>
+        <footer><p>Thanks for talking the time to read &#x1F642;</p></footer>
     </body>
 </html>
